--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="text-align:center; padding:50px;">
   <h1>View Model in AR</h1>
-  <a rel="ar" href="model.usdz">
+  <a rel="ar" href="ImageToStl.com_d36e007406f6b5c0f1e689f279376bf9">
     <img src="preview.jpg" alt="View in AR" width="300">
   </a>
   <p>Tap the image on iPhone/iPad Safari to view in AR.</p>
