--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <a rel="ar" href="ImageToStl.com_d36e007406f6b5c0f1e689f279376bf9">
     <img src="preview.jpg" alt="View in AR" width="300">
   </a>
-  <p>Tap the image on iPhone/iPad Safari to view in AR.</p>
+  <p>ImageToStl.com_d36e007406f6b5c0f1e689f279376bf9.</p>
 </body>
 </html>
