--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AR Quick Look Demo</title>
+  <title>顯示圖片</title>
+  <style>
+    body {
+      text-align: center;
+      padding: 50px;
+    }
+    img {
+      max-width: 90%;
+      height: auto;
+    }
+  </style>
 </head>
-<body style="text-align:center; padding:50px;">
-  <h1>View Model in AR</h1>
-  <a rel="ar" href="ImageToStl.com_d36e007406f6b5c0f1e689f279376bf9">
-    <img src="preview.jpg" alt="View in AR" width="300">
-  </a>
-  <p>ImageToStl.com_d36e007406f6b5c0f1e689f279376bf9.</p>
+<body>
+  <img src="abcd.jpg" alt="abcd 圖片">
 </body>
 </html>
