--- a/index.html
+++ b/index.html
@@ -1,20 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>顯示圖片</title>
+  <title>A-Frame 3D 模型展示</title>
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <style>
-    body {
-      text-align: center;
-      padding: 50px;
-    }
-    img {
-      max-width: 90%;
-      height: auto;
+    body { margin:0; }
+    #loading {
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      font-family: sans-serif;
+      font-size: 18px;
+      color: #fff;
+      background: rgba(0,0,0,0.6);
+      padding: 10px 20px;
+      border-radius: 5px;
+      z-index: 10;
     }
   </style>
 </head>
 <body>
-  <img src="abcd.jpg" alt="abcd image">
+  <div id="loading">載入中...</div>
+  <a-scene background="color: #ECECEC">
+    <a-assets>
+      <a-asset-item id="model" src="https://github.com/gedun7816-dev/ar-demo/releases/download/model/model.glb"></a-asset-item>
+    </a-assets>
+
+    <a-entity gltf-model="#model" position="0 0 -3" rotation="0 45 0" scale="1 1 1"></a-entity>
+
+    <a-entity camera look-controls position="0 1.6 0"></a-entity>
+    <a-entity light="type: ambient; intensity: 0.6"></a-entity>
+    <a-entity light="type: directional; intensity: 0.8" position="1 1 0"></a-entity>
+  </a-scene>
+
+  <script>
+    const scene = document.querySelector('a-scene');
+    const loading = document.getElementById('loading');
+
+    if (scene.hasLoaded) {
+      loading.style.display = 'none';
+    } else {
+      scene.addEventListener('loaded', () => {
+        loading.style.display = 'none';
+      });
+    }
+  </script>
 </body>
 </html>
+
