--- a/index.html
+++ b/index.html
@@ -1,51 +1,45 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <title>A-Frame 3D 模型展示</title>
+  <meta charset="utf-8" />
+  <title>3D Model Viewer + AR Quick Look</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <style>
-    body { margin:0; }
-    #loading {
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      font-family: sans-serif;
-      font-size: 18px;
-      color: #fff;
-      background: rgba(0,0,0,0.6);
-      padding: 10px 20px;
-      border-radius: 5px;
-      z-index: 10;
+    html,body { margin:0; height:100%; background:#000; }
+    #ar-button {
+      position: absolute; bottom: 20px; left: 50%;
+      transform: translateX(-50%);
+      padding: 12px 20px;
+      background: #007aff; color:#fff; border:none; border-radius:8px;
+      font-size: 16px; font-family: sans-serif;
+      display: none; cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div id="loading">載入中...</div>
-  <a-scene background="color: #ECECEC">
-    <a-assets>
-      <a-asset-item id="model" src="https://github.com/gedun7816-dev/ar-demo/releases/download/model/model.glb"></a-asset-item>
-    </a-assets>
 
-    <a-entity gltf-model="#model" position="0 0 -3" rotation="0 45 0" scale="1 1 1"></a-entity>
+<a-scene embedded background="color: #222">
+  <a-entity gltf-model="model.gltf" position="0 -1 -3" rotation="0 45 0" scale="1 1 1"></a-entity>
+  <a-entity light="type: ambient; intensity: 0.8"></a-entity>
+  <a-entity light="type: directional; intensity: 0.9" position="1 1 0"></a-entity>
+  <a-entity camera look-controls></a-entity>
+</a-scene>
 
-    <a-entity camera look-controls position="0 1.6 0"></a-entity>
-    <a-entity light="type: ambient; intensity: 0.6"></a-entity>
-    <a-entity light="type: directional; intensity: 0.8" position="1 1 0"></a-entity>
-  </a-scene>
+<!-- AR Quick Look 按鈕 -->
+<a id="ar-link" rel="ar" href="model.usdz">
+  <button id="ar-button">在 AR 中查看</button>
+</a>
 
-  <script>
-    const scene = document.querySelector('a-scene');
-    const loading = document.getElementById('loading');
+<script>
+  function isIOS() {
+    return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+  }
+  if (isIOS()) {
+    document.getElementById('ar-button').style.display = 'block';
+  }
+</script>
 
-    if (scene.hasLoaded) {
-      loading.style.display = 'none';
-    } else {
-      scene.addEventListener('loaded', () => {
-        loading.style.display = 'none';
-      });
-    }
-  </script>
 </body>
 </html>
 
