--- a/index.html
+++ b/index.html
@@ -2,37 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>3D Model Viewer with AR</title>
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <title>Three.js GLTF Example</title>
   <style>
-    body {
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f0f0f0;
-      flex-direction: column;
-    }
-    model-viewer {
-      width: 100%;
-      height: 80vh;
-      background-color: #fff;
-    }
+    body { margin: 0; background: #000; }
+    canvas { display: block; }
   </style>
+  <!-- 載入 Three.js -->
+  <script src="https://unpkg.com/three@0.157.0/build/three.min.js"></script>
+  <!-- 載入 GLTFLoader -->
+  <script src="https://unpkg.com/three@0.157.0/examples/js/loaders/GLTFLoader.js"></script>
+  <!-- 載入 OrbitControls -->
+  <script src="https://unpkg.com/three@0.157.0/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
-  <h1>3D Model Viewer</h1>
-  <model-viewer src="model.gltf" ar ar-modes="webxr scene-viewer quick-look"
-                camera-controls tone-mapping="neutral"
-                shadow-intensity="1" exposure="1"
-                alt="A 3D model">
-    <button slot="ar-button" id="ar-button">
-      在您的空間中查看
-    </button>
-    <div id="ar-prompt">
-      <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-    </div>
-  </model-viewer>
+<script>
+  // 建立場景
+  const scene = new THREE.Scene();
+
+  // 建立相機
+  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+  camera.position.set(0, 1.5, 3);
+
+  // 渲染器
+  const renderer = new THREE.WebGLRenderer({ antialias: true });
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  document.body.appendChild(renderer.domElement);
+
+  // 控制器
+  const controls = new THREE.OrbitControls(camera, renderer.domElement);
+  controls.enableDamping = true;
+
+  // 環境光與方向光
+  const ambientLight = new THREE.AmbientLight(0xffffff, 1);
+  scene.add(ambientLight);
+  const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+  directionalLight.position.set(5, 10, 7.5);
+  scene.add(directionalLight);
+
+  // 載入 GLTF 模型
+  const loader = new THREE.GLTFLoader();
+  loader.load(
+    'model.gltf', // 你的模型檔案
+    function (gltf) {
+      scene.add(gltf.scene);
+    },
+    function (xhr) {
+      console.log((xhr.loaded / xhr.total * 100) + '% loaded');
+    },
+    function (error) {
+      console.error('載入錯誤:', error);
+    }
+  );
+
+  // 視窗尺寸變化
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+  });
+
+  // 動畫循環
+  function animate() {
+    requestAnimationFrame(animate);
+    controls.update();
+    renderer.render(scene, camera);
+  }
+  animate();
+</script>
 </body>
 </html>
+
