--- a/index.html
+++ b/index.html
@@ -2,66 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Three.js GLTF Example</title>
+  <title>GLTF Viewer</title>
   <style>
-    body { margin: 0; background: #000; }
+    body { margin: 0; }
     canvas { display: block; }
   </style>
-  <!-- 載入 Three.js -->
-  <script src="https://unpkg.com/three@0.157.0/build/three.min.js"></script>
-  <!-- 載入 GLTFLoader -->
-  <script src="https://unpkg.com/three@0.157.0/examples/js/loaders/GLTFLoader.js"></script>
-  <!-- 載入 OrbitControls -->
-  <script src="https://unpkg.com/three@0.157.0/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/controls/OrbitControls.js"></script>
 </head>
 <body>
 <script>
-  // 建立場景
+  // 基本場景
   const scene = new THREE.Scene();
+  scene.background = new THREE.Color(0xaaaaaa);
 
-  // 建立相機
-  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-  camera.position.set(0, 1.5, 3);
+  const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+  camera.position.set(0, 1, 3);
 
-  // 渲染器
   const renderer = new THREE.WebGLRenderer({ antialias: true });
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.body.appendChild(renderer.domElement);
 
-  // 控制器
+  // 燈光
+  const hemiLight = new THREE.HemisphereLight(0xffffff, 0x444444, 1.2);
+  hemiLight.position.set(0, 20, 0);
+  scene.add(hemiLight);
+
+  const dirLight = new THREE.DirectionalLight(0xffffff, 1);
+  dirLight.position.set(3, 10, 10);
+  scene.add(dirLight);
+
+  // 控制
   const controls = new THREE.OrbitControls(camera, renderer.domElement);
   controls.enableDamping = true;
 
-  // 環境光與方向光
-  const ambientLight = new THREE.AmbientLight(0xffffff, 1);
-  scene.add(ambientLight);
-  const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-  directionalLight.position.set(5, 10, 7.5);
-  scene.add(directionalLight);
-
-  // 載入 GLTF 模型
+  // 載入模型
   const loader = new THREE.GLTFLoader();
-  loader.load(
-    'model.gltf', // 你的模型檔案
-    function (gltf) {
-      scene.add(gltf.scene);
-    },
-    function (xhr) {
-      console.log((xhr.loaded / xhr.total * 100) + '% loaded');
-    },
-    function (error) {
-      console.error('載入錯誤:', error);
-    }
-  );
+  loader.load('model.gltf', function (gltf) {
+    scene.add(gltf.scene);
+    // 自動調整鏡頭
+    const box = new THREE.Box3().setFromObject(gltf.scene);
+    const size = box.getSize(new THREE.Vector3()).length();
+    const center = box.getCenter(new THREE.Vector3());
 
-  // 視窗尺寸變化
+    controls.reset();
+    controls.target.copy(center);
+    camera.position.copy(center).add(new THREE.Vector3(0, size / 2, size));
+    camera.lookAt(center);
+  }, undefined, function (error) {
+    console.error('載入模型錯誤:', error);
+  });
+
+  // 畫面更新
   window.addEventListener('resize', () => {
     camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
     renderer.setSize(window.innerWidth, window.innerHeight);
   });
 
-  // 動畫循環
   function animate() {
     requestAnimationFrame(animate);
     controls.update();
@@ -71,4 +70,5 @@
 </script>
 </body>
 </html>
+
 
