--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 </head>
 <body>
 <script>
-  // 基本場景
+  // 場景
   const scene = new THREE.Scene();
   scene.background = new THREE.Color(0xaaaaaa);
 
+  // 相機
   const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
   camera.position.set(0, 1, 3);
 
+  // 渲染器
   const renderer = new THREE.WebGLRenderer({ antialias: true });
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.body.appendChild(renderer.domElement);
@@ -37,30 +39,37 @@
   const controls = new THREE.OrbitControls(camera, renderer.domElement);
   controls.enableDamping = true;
 
-  // 載入模型
+  // 載入 GLTF 模型（用相對路徑，確保和 index.html 在同一資料夾）
   const loader = new THREE.GLTFLoader();
-  loader.load('model.gltf', function (gltf) {
-    scene.add(gltf.scene);
-    // 自動調整鏡頭
-    const box = new THREE.Box3().setFromObject(gltf.scene);
-    const size = box.getSize(new THREE.Vector3()).length();
-    const center = box.getCenter(new THREE.Vector3());
+  loader.load(
+    'model.gltf', // ← 這裡不要改成網址
+    function (gltf) {
+      scene.add(gltf.scene);
 
-    controls.reset();
-    controls.target.copy(center);
-    camera.position.copy(center).add(new THREE.Vector3(0, size / 2, size));
-    camera.lookAt(center);
-  }, undefined, function (error) {
-    console.error('載入模型錯誤:', error);
-  });
+      // 自動調整鏡頭位置
+      const box = new THREE.Box3().setFromObject(gltf.scene);
+      const size = box.getSize(new THREE.Vector3()).length();
+      const center = box.getCenter(new THREE.Vector3());
 
-  // 畫面更新
+      controls.target.copy(center);
+      camera.position.copy(center).add(new THREE.Vector3(0, size / 2, size));
+      camera.lookAt(center);
+    },
+    undefined,
+    function (error) {
+      console.error('載入模型錯誤:', error);
+      alert("模型載入失敗，請檢查 model.gltf 是否存在且路徑正確");
+    }
+  );
+
+  // 視窗大小改變
   window.addEventListener('resize', () => {
     camera.aspect = window.innerWidth / window.innerHeight;
     camera.updateProjectionMatrix();
     renderer.setSize(window.innerWidth, window.innerHeight);
   });
 
+  // 動畫
   function animate() {
     requestAnimationFrame(animate);
     controls.update();
@@ -70,5 +79,3 @@
 </script>
 </body>
 </html>
-
-
