--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>3D 模型展示</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body { margin: 0; overflow: hidden; background: #000; }
-    canvas { display: block; }
+    body { margin: 0; overflow: hidden; }
+    canvas { width: 100%; height: 100%; display: block; }
   </style>
 </head>
 <body>
-  <script type="module" src="main.js"></script>
+  <!-- 必須加 type="module" 才能載入 ES module -->
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
