--- a/index.html
+++ b/index.html
@@ -3,29 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Three.js GLB Demo</title>
+  <title>3D 模型展示</title>
   <style>
     body {
       margin: 0;
-      overflow: hidden; /* 不要滚动条 */
-      background-color: #000; /* 背景黑色更凸显模型 */
+      overflow: hidden;
+      background-color: #000;
     }
-    #loading {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      font-family: sans-serif;
-      font-size: 18px;
+    canvas {
+      display: block;
     }
   </style>
+  <!-- 引入 Three.js CDN -->
+  <script src="https://unpkg.com/three@0.153.0/build/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.153.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
   <!-- 加载提示 -->
-  <div id="loading">加载中...</div>
-
-  <!-- 你的 Three.js 代码 -->
-  <script type="module" src="./main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
