--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
       display: block;
     }
   </style>
-  <!-- 引入 Three.js CDN -->
-  <script src="https://unpkg.com/three@0.153.0/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.153.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
   <!-- 加载提示 -->
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
