--- a/index.html
+++ b/index.html
@@ -1,51 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>basic</title>
-<style>
-body {
-	background: #333;
-	overflow:hidden;
-}
-</style>
-<script src="../lib/Three_r49.js"></script>
-<script>
-window.addEventListener( 'DOMContentLoaded', function(){
-	var width = window.innerWidth;
-	var height = window.innerHeight;
-	
-	var renderer = new THREE.WebGLRenderer();
-	renderer.setSize( width, height );
-	document.body.appendChild( renderer.domElement );
+import * as THREE from 'three';
 
-	var scene = new THREE.Scene();
+const width = window.innerWidth, height = window.innerHeight;
 
-	var camera = new THREE.PerspectiveCamera( 40, width / height, 1, 1000 );
-	camera.position.z = 100;
-	scene.add( camera );
-	
-	var geom = new THREE.Geometry();
-	var v1 = new THREE.Vector3(0,0,0);
-	var v2 = new THREE.Vector3(30,0,0);
-	var v3 = new THREE.Vector3(30,30,0);
-	
-	console.log(geom.vertices)
-	geom.vertices.push(v1);
-	geom.vertices.push(v2);
-	geom.vertices.push(v3);
-	
-	geom.faces.push( new THREE.Face3( 0, 1, 2 ) );
-	geom.computeFaceNormals();
-	
-	var mesh= new THREE.Mesh( geom, new THREE.MeshNormalMaterial() );
-	scene.add(mesh);
-	
+// init
+
+const camera = new THREE.PerspectiveCamera( 70, width / height, 0.01, 10 );
+camera.position.z = 1;
+
+const scene = new THREE.Scene();
+
+const geometry = new THREE.BoxGeometry( 0.2, 0.2, 0.2 );
+const material = new THREE.MeshNormalMaterial();
+
+const mesh = new THREE.Mesh( geometry, material );
+scene.add( mesh );
+
+const renderer = new THREE.WebGLRenderer( { antialias: true } );
+renderer.setSize( width, height );
+renderer.setAnimationLoop( animate );
+document.body.appendChild( renderer.domElement );
+
+// animation
+
+function animate( time ) {
+
+	mesh.rotation.x = time / 2000;
+	mesh.rotation.y = time / 1000;
+
 	renderer.render( scene, camera );
-}, false);
-</script>
-</head>
-<body>
 
-</body>
+}
 </html>
